# gupnp-sharp

./: Makefile.am  autogen.sh  configure.ac  gupnp-sharp-1.0.pc.in
gssdp/: AssemblyInfo.cs.in  Client.custom  Makefile.am  ResourceBrowser.custom  ResourceGroup.custom  gssdp-api.raw  gssdp-sharp.dll.config.in  gssdp-sharp.snk  gssdp.metadata
gupnp/: AssemblyInfo.cs.in  Context.custom  DeviceInfo.custom  Makefile.am  ServiceActionInfo.custom  ServiceIntrospection.custom  ServiceProxy.custom  ServiceProxyAction.custom  ServiceStateVariableInfo.custom  gupnp-api.raw  gupnp-sharp.dll.config.in  gupnp-sharp.snk  gupnp.metadata
gupnp-av/: AssemblyInfo.cs.in  Makefile.am  gupnp-av-api.raw  gupnp-av-sharp.dll.config.in  gupnp-av-sharp.snk  gupnp-av.metadata
sources/: gssdp-sharp.sources  gupnp-av-sharp.sources  gupnp-sharp.sources
